--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "cmdk": "^1.1.1",
     "date-fns": "^3.6.0",
     "lucide-react": "^0.501.0",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.56.0",
     "react-router-dom": "^7.5.1",
+    "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss": "^4.1.4",
     "vaul": "^1.1.2",
